# PyDocx

./: .huggingfaceignore  Dockerfile  deploy.py  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: rag.py
backend/app/api/v1/endpoints/: chat.py  documents.py  upload.py
backend/app/core/: celery_app.py  vector_store.py
backend/app/services/: ingestion.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/components/: chat-interface.tsx  deep-search-status.tsx  pdf-viewer.tsx  upload-zone.tsx
frontend/src/app/components/home/: how-it-works.tsx  landing-view.tsx  trust-strip.tsx  workspace-view.tsx
frontend/src/components/ui/: resizable.tsx
frontend/src/hooks/: useAgent.ts
