[project]
name = "docunexus-api"
version = "0.1.0"
description = "Agentic Document AI API"
authors = [
    {name = "Vikas Gautam",email = "vikasgautamug2003@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "qdrant-client (>=1.16.2,<2.0.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pinecone[asyncio] (<8.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "pypdf (>=6.6.2,<7.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "chromadb (>=1.4.1,<2.0.0)",
    "duckduckgo-search>=6.0.0,<7.0.0",
    "lxml = >=5.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
